--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Book Listing</string>
     <string name="action_settings">Settings</string>
+    <string name="no_books">No Data for this book</string>
+    <string name="no_internet">No Internet Connection</string>
 </resources>
