--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="no_books">No Data for this book</string>
     <string name="no_internet">No Internet Connection</string>
+    <string name="search">Search for books…</string>
+    <string name="btn">Search</string>
 </resources>
